# Sanctifier

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  e2e-coverage.yml  rust.yml
contracts/: README.md
contracts/kani-poc/: Cargo.toml
contracts/reentrancy-guard/: Cargo.toml
contracts/reentrancy-guard/src/: lib.rs
contracts/reentrancy-guard/tests/: reentrancy_test.rs
contracts/vulnerable-contract/: Cargo.toml
contracts/vulnerable-contract/src/: lib.rs
docs/: getting-started.md  kani-integration.md
frontend/: package-lock.json  package.json
frontend/.storybook/: main.ts
frontend/app/: globals.css
frontend/app/components/: ThemeToggle.tsx
frontend/app/dashboard/: page.tsx
tooling/sanctifier-cli/: Cargo.toml  README.md
tooling/sanctifier-cli/src/: main.rs  vulndb.rs
tooling/sanctifier-cli/src/commands/: analyze.rs  deploy.rs  init.rs  mod.rs
tooling/sanctifier-cli/tests/: cli_tests.rs
tooling/sanctifier-core/: Cargo.toml
tooling/sanctifier-core/src/: gas_estimator.rs  gas_report.rs  lib.rs  reentrancy.rs  storage_collision.rs
tooling/sanctifier-core/src/rules/: auth_gap.rs  ledger_size.rs
tooling/sanctifier-core/src/tests/: complexity_tests.rs  gas_estimator_tests.rs  lib_tests.rs  mod.rs  reentrancy_tests.rs  storage_collision_tests.rs
tooling/sanctifier-core/tests/: integration_token_test.rs
