[package]
name = "sanctifier-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for Sanctifier - Stellar Soroban Security Suite"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
sanctifier-core = { version = "0.1.0", path = "../sanctifier-core" }
toml = "0.9"
tokio = { version = "1.0", features = ["full"] }
colored = "2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.8"


[[bin]]
name = "sanctifier"
path = "src/main.rs"

